First integration with kad webserver - List & Get components
